​Review star not showing in OSM map popup - FIXED​

--- a/assets/css/partials/_map_bubble_osm.scss
+++ b/assets/css/partials/_map_bubble_osm.scss
@@ -14,6 +14,12 @@
 			position: relative;
 		}
 
+		.gd-rating{
+			i, svg{
+				position: unset;
+			}
+		}
+
 		#map_loading {
 			width: 100%;
 			height: 100%;
